# GenAI-Learning-Outcomes

./: .gitignore  LICENSE  README.md  pyproject.toml
analyze/: analysis_behavior_heterogeneity.ipynb  analysis_inequality.ipynb  appendix_analysis.ipynb  experimental_design_stats.ipynb  feedback_analysis_plots.ipynb
analyze/background/: __init__.py  inequality.py  strata.py
analyze/behavior/: __init__.py  a1.py  a1_processing.py  adoption.py  assignment.py  category_rules.py  test_assignment.py  test_category_rules.py
analyze/config/: __init__.py  encoding.py  major_classification.py  paths.py  scoring.py  visualization.py
analyze/core/: __init__.py  data_processing.py
analyze/llm/: evaluation.py
analyze/stats/: __init__.py  feature_screening.py  regression.py  tests.py
analyze/survey/: __init__.py  feedback.py  participant_feedback.py  test_quality.py
analyze/utils/: __init__.py  display.py  math_scoring.py  user_exclusion.py
analyze/visualization/: __init__.py  appendix_plots.py  behavior_plots.py  feedback_plots.py  inequality_plots.py
platform/presets/: allinone.toml  auth.example.csv
platform/src/: admin.py  chat_util.py  codemirror.py  configs.py  consent.py  custom.js  learning.py  main.py  problem.py  progress.py  review.py  survey.py  utils.py
platform/src/problemset/: __init__.py  problemset.py
platform/src/pyexec/: __init__.py  (+1 more)
platform_en/: .env.example
platform_en/src/: admin.py  codemirror.js  consent.py  custom.css  custom.js  custom_css.py  database.py  learning.py  main.py  problem.py  progress.py  review.py  survey.py
(+149 files in other folders)
