[project]
name = "genai-learning-outcomes"
version = "0.1.0"
description = "Experiment platform and analysis scripts"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "azure-identity>=1.16.0",
    "click>=8.1.7",
    "dotenv>=0.9.9",
    "fastui>=0.5.2",
    "gradio>=4.13.0",
    "greenlet>=3.0.3",
    "ipykernel>=6.29.3",
    "jupyterlab>=4.5.2",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-core==0.1.52",
    "langchain-openai==0.0.8",
    "langchain-text-splitters==0.0.2",
    "lark>=1.1.9",
    "llvmlite==0.42.0",
    "markdown>=3.6",
    "matplotlib>=3.10.7",
    "nicegui==1.4.26",
    "numba==0.59.1",
    "numpy>=1.26.0",
    "openai>=1.3.7,<2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=10.0.0",
    "pyjwt>=2.8.0",
    "pymdown-extensions>=10.8",
    "pypdf>=6.6.0",
    "python-dotenv>=1.0.0",
    "python-markdown-math>=0.8",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap==0.44.1",
    "sqlalchemy>=2.0.44",
    "sqlitedict>=2.1.0",
    "statsmodels>=0.14.6",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
